argo/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterscope-redis
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: clusterscope-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
